[tool.poetry]
name = "admin-bot"
version = "0.0.1"
description = "Admin-bot"
authors = ["Natalia Saar <biber69@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.22.1"
aiosqlite = "^0.17.0"
asyncpg = "^0.26.0"
pydantic = "^1.10.2"
dnspython = "^2.2.1"
email-validator = "^1.3.0"
python-decouple = "^3.6"
python-dotenv = "^0.21.0"
pytz = "^2022.2.1"
validators = "^0.20.0"
envreader = "^0.0.5"
psycopg2-binary = "^2.9.4"
wheel = "^0.37.1"
six = "^1.16.0"
psycopg2 = "^2.9.4"
loguru = "^0.6.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
